# faces

./: .gitignore  README.md  default.env  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/recognition/: websocket.py
backend/recognition/faces/: models.py  serializers.py  storage.py  tasks.py  tests.py  views.py
backend/recognition/faces/migrations/: 0001_initial.py
backend/recognition/faces/tests/: test_api.py  test_processing.py
backend/recognition/recognition/: asgi.py  settings.py  urls.py  wsgi.py
proxy/: default.conf
